:lipstick: Design: 폰트 theme 작성
- 폰트 디자인 시안 반영

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -2,3 +2,4 @@
   href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
   rel="stylesheet"
 />
+<link href="https://webfontworld.github.io/SCoreDream/SCoreDream.css" rel="stylesheet" />
